--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,25 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.scss">
     <script src="./js/index.js" defer></script>
-    <title>Test page</title>
+    <title>Thought Diary</title>
 </head>
 <body>
-    <h1>Hello Parsel</h1>
-    <p>It's me!</p>
+    <header class="header" id="header">
+        <div class="content_wrapper">
+            <div class="header_content">
+                <h1 class="header_title">Welcome to Thoughts Diary</h1>
+                <div class="header_text_wrapper">
+                    <p class="header_text">A daily journal to help you elevate your thoughts and get out of your head.</p>
+                </div>
+                <button class="button header_button" id="headerButton">Get started now</button>
+            </div>
+        </div>
+    </header>
+    <main class="main" id="main">
+        <div class="content_wrapper"></div>
+    </main>
+    <footer class="footer" id="footer">
+        <div class="content_wrapper"></div>
+    </footer>
 </body>
 </html>
