--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d2a058a3ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.scss">
     <script src="./js/index.js" defer></script>
     <title>Thought Diary</title>
@@ -26,7 +27,26 @@
         <div class="content_wrapper"></div>
     </main>
     <footer class="footer" id="footer">
-        <div class="content_wrapper"></div>
+        <div class="content_wrapper">
+            <div class="footer-wrapper">
+                <div>
+                    <span class="footer-text">&copy;</span>
+                    <span class="footer-text">2022</span>
+                    <a href="https://github.com/HelgaPetrovna" class="footer-link"><i class="fab fa-github"></i></a>
+                </div>
+                <div class="footer-center-link">
+                    <a href="https://teachmeskills.by/kursy-programmirovaniya/frontend-html-css-javascript-online" class="footer-link"><img class="footer_logo" src="../src/assets/icons/logo_teachMeSkills.svg" alt="Teach Me Skills logo"></a>
+                </div>
+                <div class="media-wrapper">
+                    <ul class="social-media">
+                        <li><a href="https://www.instagram.com/"><i class="fab fa-instagram sm-icon"></i></a></li>
+                        <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f sm-icon"></i></a></li>
+                        <li><a href="https://twitter.com/"><i class="fab fa-twitter sm-icon"></i></a></li>
+                        <li><a href="https://www.pinterest.com/"><i class="fab fa-pinterest sm-icon"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
