feat: add tabs and styles

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,48 @@
         </div>
     </header>
     <main class="main" id="main">
-        <div class="content_wrapper"></div>
+        <div class="content_wrapper">
+            <div class="tab_wrapper">
+                <div class="tab">
+                    <button class="tablinks" onclick="">Create New</button>
+                    <button class="tablinks" onclick="">My thoughts</button>
+                    <button class="tablinks" onclick="">Memorized</button>
+                  </div>
+            </div>
+            <div class="tabcontent" id="CreateNew">
+                <h2 class="tab_title">Create a new note</h2>
+                <form class="create_new_form" action="">
+                    <label class="form_label" for="createTitle">Title</label>
+                    <input class="form_input" type="text" id="createTitle" value="" placeholder="What happend?">
+                    <label class="form_label" for="yourThoughts">Your thoughts</label>
+                    <textarea name="yourThoughts" id="yourThoughts" cols="30" rows="10" placeholder="What do you think about this?"></textarea>
+                    <select name="yourEmotions" id="yourEmotions">
+                        <option value="selected">Choose emotion</option>
+                        <option value="Happy">Happy, optimistic, peaceful</option>
+                        <option value="Surprised">Surprised, amazed, exited</option>
+                        <option value="Bad">Bad, tired, stressed</option>
+                        <option value="Fearful">Fearful, weak, insecure</option>
+                        <option value="Angry">Angry, frustrated, aggressive</option>
+                        <option value="Disgusted">Disgusted, disappointment, awful</option>
+                        <option value="Sad">Sad, lonely, guilty</option>
+                    </select>
+                    <button class="form_buttom">Create</button>
+                </form>
+            </div>
+            <div class="tabcontent" id="MyThoughts">
+                <div class="thoughts_item">
+                    <div class="thoughts_background">
+                        <h3 class="card_title">Lorem, ipsum dolor</h3>
+                    </div>
+                <p class="day">22.01.22</p>
+                <div class="thoughts_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, saepe ducimus facere quia minima assumenda earum sit beatae incidunt voluptates suscipit cumque maxime atque quasi ipsum illum, iusto consequatur? Quibusdam pariatur ab mollitia dolores placeat!</div>
+                <div class="emotion_tag">Surprised, amazed, exited</div>
+                <button class="remember_button" id="rememberButtom">Remember this</button>
+            </div>
+            <div class="tabcontent" id="Memorized">
+                <h2 class="tab_title">Memorable moments</h2>
+            </div>
+        </div>
     </main>
     <footer class="footer" id="footer">
         <div class="content_wrapper">
