--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2a058a3ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.scss">
-    <script src="./js/index.js" defer></script>
+    <script type="module" src="./js/index.js" defer></script>
     <title>Thought Diary</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         <div class="content_wrapper">
             <div class="tab_wrapper">
                 <div class="tab">
-                    <button class="tablinks" onclick="">Create New</button>
+                    <button class="tablinks active" onclick="">Create New</button>
                     <button class="tablinks" onclick="">My thoughts</button>
                     <button class="tablinks" onclick="">Memorized</button>
                   </div>
@@ -49,7 +49,7 @@
                         <option value="Disgusted">Disgusted, disappointment, awful</option>
                         <option value="Sad">Sad, lonely, guilty</option>
                     </select>
-                    <button class="form_buttom">Create</button>
+                    <button class="form_buttom" type="submit">Create</button>
                 </form>
             </div>
             <div class="tabcontent" id="MyThoughts">
